day3/bgg/app-service-v1.yaml
apiVersion: v1
kind: Service

metadata:
  name: bgg-app-svc-v1
  namespace: workshop-day2

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bgg-app-pod
    app.kubernetes.io/version: "v1"
  ports:
  - name: app-port
    port: 80
    targetPort: bgg-app-port
