day3/bgg/app-service-v2.yaml
apiVersion: v1
kind: Service

metadata:
  name: bgg-app-svc-v2
  namespace: workshop-day2

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bgg-app-pod
    app.kubernetes.io/version: "v2"
  ports:
  - name: app-port-v2
    port: 80
    targetPort: bgg-app-port-v2
